Changes with phpMorphy 0.2.3                                     02 Aug 2007
    *) Remove all var stuff from source code(now really E_STRICT compatible, i hope =])
    *) Rename all interfaces to {interface name}_Interface(old version is: phpMorphy_I{interface name})

Changes with phpMorphy 0.2.2                                     24 Jun 2007
    *) Remove php4 support
    *) Fully E_STRICT compatible
    *) Fix bug with getAllFormsWithGramInfo() in bulk mode

Changes with phpMorphy 0.2.1                                     22 Jun 2007
    *) getPseudoRoot() method returns now ;)
    *) getAllFormsWithGramInfo() in bulk mode returns wrong result:
	    BEFORE 0.2.1:
	    -------------
		array(
			'TEST' => array(
					'forms' => array(
						'TEST' => array(word forms),
					),
					'common' => common ancode OR grammem(s),
					'all' => all gramcodes or grammems
				),
				array(
					'forms' => array(
						WORD => array(forms)
					),
					etc...
				)
			)
		)

		0.2.1:
	    -------------
		array(
			'TEST' => array(
				array(
					'forms' => array(word forms),
					'common' => common ancode OR grammem(s),
					'all' => all gramcodes or grammems
				),
				array(
					'forms' => array(word forms),
					etc...
				)
			)
		)

Changes with phpMorphy 0.2a                                      05 Apr 2007

    *) Change dictionary format(now word lookup have O(N) complexity, N = word len)
    *) Introduce shared memory storage type
    *) Speed up about 100%
    *) Introduce bulk mode
    *) Removed some options from facade

Changes with phpMorphy 0.1a                                      01 Feb 2007

    *) The first public version.