@@ -1,3 +1,6 @@
+Changes with phpMorphy 0.2.3.1                                   02 Aug 2007
+    *) Remove php4 stuff from fsa_state.php
+
 Changes with phpMorphy 0.2.3                                     02 Aug 2007
     *) Remove all var stuff from source code(now really E_STRICT compatible, i hope =])
     *) Rename all interfaces to {interface name}_Interface(old version is: phpMorphy_I{interface name})
